Sema: Fix crash with non-Optional weak @IBOutlet

We were skipping the diagnostic to allow @IBOutlet to diagnose the
non-Optional type, but we still have to mark our ownership attribute
as invalid so that we don't attempt to form the ReferenceStorageType
with a non-Optional underlying type.

Fixes <https://bugs.swift.org/browse/SR-9889>, <rdar://problem/48088046>.